--- a/app/src/main/res/layout/activity_transporter_view_schedule_listview.xml
+++ b/app/src/main/res/layout/activity_transporter_view_schedule_listview.xml
@@ -34,7 +34,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/timePicked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/farmerName"
