--- a/app/src/main/res/layout/activity_begin_sign_up.xml
+++ b/app/src/main/res/layout/activity_begin_sign_up.xml
@@ -14,11 +14,11 @@ tools:context="com.example.wagner.avocado.BeginSignUp">
         android:layout_marginTop="64dp"
         android:baselineAligned="false"
         android:text="WhatsApp"
-        app:layout_constraintStart_toEndOf="@+id/facebookButton"
+        app:layout_constraintStart_toEndOf="@+id/signUpFarmerAddProfileButton"
         app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
 
     <Button
-        android:id="@+id/facebookButton"
+        android:id="@+id/signUpFarmerAddProfileButton"
         android:layout_width="108dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -102,7 +102,7 @@ tools:context="com.example.wagner.avocado.BeginSignUp">
         android:layout_marginStart="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/googleLogo"
-        app:layout_constraintTop_toBottomOf="@+id/facebookButton"
+        app:layout_constraintTop_toBottomOf="@+id/signUpFarmerAddProfileButton"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/facebook_logo" />
 
