--- a/app/src/main/res/layout/activity_sign_up_transporter_add_photos.xml
+++ b/app/src/main/res/layout/activity_sign_up_transporter_add_photos.xml
@@ -65,28 +65,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="73dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="248dp"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="15zzdz"
+        android:layout_height="152dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.328"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/insert_photo" />
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="212dp"
-        android:layout_marginTop="272dp"
-        android:text="Add photos"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@mipmap/insert_photo"
+        tools:layout_editor_absoluteY="170dp" />
 
 </android.support.constraint.ConstraintLayout>
