add short bio in sign up sequence

--- a/app/src/main/res/layout/activity_sign_up_transporter_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_transporter_add_profile.xml
@@ -7,6 +7,71 @@
     android:layout_height="match_parent"
     tools:context="com.example.wagner.avocado.SignUpTransporterAddProfile">
 
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="288dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:text="Add a profile picture!"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/transporterEnterBioText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        android:text="Enter a short bio:"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpTransporterAddProfileButton" />
+
+    <Button
+        android:id="@+id/signUpTransporterAddProfileButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="Upload a profile picture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transporterAddProfileViewPhoto" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="279dp"
+        android:layout_height="33dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="Note: People with profile pictures recieve 45% more messaging requests."
+        android:textAlignment="textStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+
+    <ImageView
+        android:id="@+id/transporterAddProfileViewPhoto"
+        android:layout_width="311dp"
+        android:layout_height="118dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:srcCompat="@mipmap/insert_photo" />
+
     <Button
         android:id="@+id/backButton"
         style="@style/Widget.AppCompat.Button.Colored"
@@ -29,37 +94,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="288dp"
-        android:layout_height="134dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="28dp"
-        android:text="Would you like to add a profile picture?"
-        android:textAlignment="center"
-        android:textSize="26sp"
+    <EditText
+        android:id="@+id/signUpTransporterEnterBioText"
+        android:layout_width="305dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/signUpFarmerAddPhotosButton"
-        android:layout_width="wrap_content"
-        android:layout_height="69dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="92dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23"
-        app:srcCompat="@mipmap/insert_photo" />
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="112dp"
-        android:text="Add photos"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+        app:layout_constraintTop_toBottomOf="@+id/transporterEnterBioText" />
 
 </android.support.constraint.ConstraintLayout>
