--- a/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     tools:context="com.example.wagner.avocado.SignUpFarmerAddProfile">
 
+    <EditText
+        android:id="@+id/signUpFarmerEnterBioText"
+        android:layout_width="305dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/farmerEnterBioText" />
+
     <Button
         android:id="@+id/signUpFarmerAddProfileBackButton"
         style="@style/Widget.AppCompat.Button.Colored"
@@ -32,7 +46,7 @@
     <TextView
         android:id="@+id/textView23"
         android:layout_width="288dp"
-        android:layout_height="67dp"
+        android:layout_height="56dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
@@ -93,16 +107,5 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpFarmerAddProfileButton" />
-
-    <MultiAutoCompleteTextView
-        android:id="@+id/multiAutoCompleteTextView"
-        android:layout_width="316dp"
-        android:layout_height="49dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/farmerEnterBioText" />
 
 </android.support.constraint.ConstraintLayout>
