--- a/app/src/main/res/layout/activity_sign_up_transporter_add_photos.xml
+++ b/app/src/main/res/layout/activity_sign_up_transporter_add_photos.xml
@@ -7,6 +7,18 @@
     tools:context="com.example.wagner.avocado.SignUpTransporterAddPhotos">
 
     <Button
+        android:id="@+id/signUpTransporterAddPhotosButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="Add Photos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transporterAddPhotosViewPhoto" />
+
+    <Button
         android:id="@+id/signUpSetLocationSkipButton"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="62dp"
@@ -66,14 +78,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="15zzdz"
-        android:layout_height="152dp"
+        android:id="@+id/transporterAddPhotosViewPhoto"
+        android:layout_width="311dp"
+        android:layout_height="118dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/insert_photo"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:srcCompat="@mipmap/insert_photo" />
 
 </android.support.constraint.ConstraintLayout>
