--- a/app/src/main/res/layout/activity_transporter_available_times.xml
+++ b/app/src/main/res/layout/activity_transporter_available_times.xml
@@ -32,7 +32,7 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="321dp"
-        android:layout_height="371dp"
+        android:layout_height="381dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="68dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,11 +44,12 @@
         android:layout_height="58dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Here are the dates and times you selected:"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
