--- a/app/src/main/res/layout/activity_transporter_edit_profile.xml
+++ b/app/src/main/res/layout/activity_transporter_edit_profile.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/header_cover_image"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_green_dark"
             android:elevation="4dp"
             android:paddingBottom="24dp">
 
@@ -115,7 +115,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@android:color/holo_green_light"
+                android:background="@android:color/holo_green_dark"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -153,7 +153,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@android:color/holo_green_light"
+                android:background="@android:color/holo_green_dark"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -189,7 +189,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@android:color/holo_green_light"
+                android:background="@android:color/holo_green_dark"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -227,7 +227,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@android:color/holo_green_light"
+                android:background="@android:color/holo_green_dark"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -265,7 +265,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@android:color/holo_green_light"
+                android:background="@android:color/holo_green_dark"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
