--- a/app/src/main/res/layout/activity_farmer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_farmer_edit_profile.xml
@@ -115,7 +115,8 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_green_dark"
+            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
@@ -153,7 +154,8 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_green_dark"
+            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
@@ -189,7 +191,8 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_green_dark"
+            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
@@ -227,7 +230,8 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_green_dark"
+            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
@@ -265,7 +269,8 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_green_dark"
+            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
