--- a/app/src/main/res/layout/activity_transporter_edit_profile.xml
+++ b/app/src/main/res/layout/activity_transporter_edit_profile.xml
@@ -116,6 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@android:color/holo_green_dark"
+                android:textColor="#fff"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -154,6 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@android:color/holo_green_dark"
+                android:textColor="#fff"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -190,6 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@android:color/holo_green_dark"
+                android:textColor="#fff"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -228,6 +231,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@android:color/holo_green_dark"
+                android:textColor="#fff"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
@@ -266,6 +270,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@android:color/holo_green_dark"
+                android:textColor="#fff"
                 android:clickable="false"
                 android:elevation="4dp"
                 android:padding="20dp"
